--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id "io.qameta.allure" version "2.8.1"
 }
 
 group 'org.example'
@@ -7,13 +8,30 @@ version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+    jcenter()
 }
+
+allure {
+    version = '2.13.0'
+    autoconfigure = true
+    aspectjweaver = true
+}
+
+sourceCompatibility = 1.8
 
 dependencies {
     implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '2.41.0'
     compile group: 'org.testng', name: 'testng', version: '6.14.3'
+    compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.59'
+    compile group: 'org.testng', name: 'testng', version: '6.10'
+    compile group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '3.7.1'
+    compile group: 'io.qameta.allure', name: 'allure-testng', version: '2.13.0'
+
 }
 
 test {
     useTestNG()
+    dependsOn cleanTest
+    systemProperties System.getProperties()
+    testLogging.showStandardStreams = true
 }
